@@ -460,7 +460,15 @@ http://hdl.handle.net/1721.123/4567</PRE>
 
     <H2><A NAME="search">Search</A></H2>
 
-    <P>DSpace's search code is a simple API which currently wraps the Lucene search engine.  The first half of the search task is indexing, and <code>org.dspace.search.DSIndexer</code> is the indexing class, which contains <code>indexContent()</code> which if passed an <code>Item</code>, <code>Community</code>, or <code>Collection</code>, will add that content's fields to the index.  The methods <code>unIndexContent()</code> and <code>reIndexContent()</code> remove and update content's index information.  The <code>DSIndexer</code> class also has a <code>main()</code> method which will rebuild the index completely.  This is invoked by the <code>dspace/bin/index-all</code> script.  The intent was for the <code>main()</code> method to be invoked on a regular basis to avoid index corruption, but we have had no problem with that so far.  Which fields are indexed by <code>DSIndexer</code>?  These fields are currently hardcoded in <code>indexItemContent()</code> <code>indexCollectionContent()</code> and <code>indexCommunityContent()</code>/ methods.</P>
+    <P>DSpace's search code is a simple API which currently wraps the Lucene search engine. The first half of the search task is indexing, and <code>org.dspace.search.DSIndexer</code> is the indexing class, which contains <code>indexContent()</code> which if passed an <code>Item</code>, <code>Community</code>, or <code>Collection</code>, will add that content's fields to the index.  The methods <code>unIndexContent()</code> and <code>reIndexContent()</code> remove and update content's index information.  The <code>DSIndexer</code> class also has a <code>main()</code> method which will rebuild the index completely.  This is invoked by the <code>dspace/bin/index-all</code> script.  The intent was for the <code>main()</code> method to be invoked on a regular basis to avoid index corruption, but we have had no problem with that so far.</P>
+    
+    <p> Which fields are indexed by <code>DSIndexer</code>? These fields are defined in dspace.cfg in the section "Fields to index for search" as name-value-pairs. The name must be unique in the form search.index.i (i is an arbitrary positive number). The value on the right side has a unique value again, which can be referenced in search-form (e.g. title, author). Then comes the metadata element which is indexed. '*' is a wildcard which includes all subelements. For example:</p>
+
+    <p><code>search.index.4 = keyword:dc.subject.*</code></p>
+
+    <p>tells the indexer to create a keyword index containing all dc.subject element values. Since the wildcard ('*') character was used in place of a qualifier, all subject metadata fields will be indexed (e.g. dc.subject.other, dc.subject.lcsh, etc)</p>
+
+    <p>By default, the fields shown in the <code>Indexed Fields</code> section below are indexed. These are hardcoded in the DSIndexer class. If any search.index.i items are specified in <code>dspace.cfg</code> these are used rather than these hardcoded fields.</p>
 
     <P>The query class <code>DSQuery</code> contains the three flavors of <code>doQuery()</code> methods--one searches the DSpace site, and the other two restrict searches to Collections and Communities.  The results from a query are returned as three lists of handles; each list represents a type of result.  One list is a list of Items with matches, and the other two are Collections and Communities that match.  This separation allows the UI to handle the types of results gracefully without resolving all of the handles first to see what kind of content the handle points to.  The <code>DSQuery</code> class also has a <code>main()</code> method for debugging via command-line searches.</P>
 
